# mrb_obchodnik

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: config.rs  db_sync.rs  main.rs
ui/: main.slint
ui/components/: progress_bar.slint  sidebar.slint
ui/views/: home.slint  import.slint  settings.slint
